tests/negative/test_decl_cn_not_init.orb
fnc main() {
    i32 cn x;
}